Fixed bug
Fixed lines overlapping with page content.

--- a/eduPlatform/static/common/background_gradient.css
+++ b/eduPlatform/static/common/background_gradient.css
@@ -28,6 +28,7 @@ body {
   height: 100%;
   margin: auto;
   width: 90vw;
+  z-index: -1;
 }
 
 .line {
